--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,129 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Bitter:wght@300;500;700&family=Bodoni+Moda:opsz,wght@6..96,400;6..96,500;6..96,600;6..96,700&family=Caveat:wght@500;700&family=Cinzel:wght@400;600&family=Comfortaa:wght@300;400;500&family=Commissioner:wght@100;300;500;700&family=Inter:wght@100;300;500;700;900&family=Kumbh+Sans:wght@300;500&family=Lato:wght@300;400;900&family=Lexend:wght@200;300;400&family=Martian+Mono:wght@100;300;500;700&family=Open+Sans&family=Orbitron:wght@400;500;600&family=Poppins:wght@300;500;700;900&family=Raleway:wght@100;200;300;400;500;700;900&family=Saira:wght@100;200;300;400;500&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Commissioner", sans-serif;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  background-color: #808080;
+  justify-content: space-between;
+  color: #fff;
+  padding: 0 60px;
+}
+
+a {
+  font-size: 19px;
+  font-weight: 600;
+  text-decoration: none;
+  color: #1515f596;
+  margin-left: 10px;
+}
+
+.active {
+  color: #00d4ff;
+}
+
+span {
+  background: rgb(2, 0, 36);
+  background: linear-gradient(90deg, #0200242a 0%, #1515f5 35%, #00d4ff 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* Home Page */
+.home-page {
+  display: flex;
+  flex-direction: column;
+  margin: 200px;
+  text-align: center;
+}
+
+/* Card Area */
+.container h1 {
+  margin-top: 16px;
+  text-align: center;
+  color: #1515f596;
+}
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 50px;
+  gap: 50px;
+}
+
+.card {
+  max-width: 200px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  border-radius: 6px;
+}
+
+.card:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.card img {
+  width: 100%;
+  max-width: 200px;
+  border-radius: 6px 6px 0 0;
+}
+
+.card-body {
+  padding: 15px;
+  text-align: center;
+  font-size: 14px;
+}
+
+.detail-page {
+  display: grid;
+  place-items: center;
+  height: calc(100vh - 90px);
+}
+
+.book-detail img {
+  max-height: 200px;
+}
+
+.book-detail {
+  box-shadow: 0 3px 8px #000;
+  max-width: 1000px;
+  padding: 50px;
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+}
+
+.book-detail .right {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+/* İnvalid Page*/
+.four0four {
+  display: flex;
+  flex-direction: column;
+  max-height: 100vh;
+  gap: 40px;
+  justify-content: center;
+  align-items: center;
+}
+.four0four img {
+  max-width: 700px;
+}
+
+.four0four h1 {
+  margin-top: 40px;
+  color: #1515f596;
 }
